fix(core): legend alignment incorrect initial rendering (#1151)
* fix(core): legend alignment incorrect initial rendering

* add right-aligned classname for legends

--- a/packages/core/src/styles/components/_legend.scss
+++ b/packages/core/src/styles/components/_legend.scss
@@ -5,6 +5,7 @@ div.#{$prefix}--#{$charts-prefix}--legend {
 	flex-wrap: wrap;
 
 	&[data-name='legend-items'] {
+	    width: 100%;
 		margin: -5px;
 	}
 
@@ -49,6 +50,10 @@ div.#{$prefix}--#{$charts-prefix}--legend {
 
 	&.center-aligned {
 		justify-content: center;
+	}
+
+	&.right-aligned {
+		justify-content: flex-end;
 	}
 
 	&.has-deactivated-items {
